# Dendro4

./: .gitignore  CMakeLists.txt  index.html  params.json
examples/heat/: main.cpp  parabolic.h  rhs.h  timeStepper.cpp  timeStepper.h
examples/include/: genPts_par.h  octreeStatistics.h  stiffnessMatrix.h
examples/src/backend/: elasticityJac.C  matProp.C  odaJac.C  omgJac.C  omgNeumann.C  omgRhs.C  vecMass.C
examples/src/drivers/: channelMesh.cpp  checkError.C  downSample.C  elasticitySolver.C  flexPartition.C  genPts_par.C  holeMesh.cpp  newElasMesh.C  newElasSolver.C  octreeStatistics.cpp  pts2Mesh.C  testConAndBal.cpp  testConBalAndCoarsen.cpp  testFnViz.cpp  testIntergrid.cpp  testPartition.C  tstDirichlet.C  tstFBM.C  tstFBM2.C  tstMatVec.C  tstMg.C  tstRegularMg.C  tsttreeSortMatVec.cpp
include/: Point.h  TreeNode.h  TreeNode.tcc  dendro.h.in  dollar.hpp  externVars.h  hcurvedata.h  nodeAndValues.h  octUtils.h  parUtils.h  parUtils.tcc  seqUtils.h  seqUtils.tcc  sfcSort.h
include/fem/: feMat.h  feMatrix.h  feMatrix.tcc  feVec.h  feVector.h
include/oda/: oda.h  oda.tcc  odaUtils.h  sub_oda.h  sub_oda.tcc
include/test/: testUtils.h  testUtils.tcc
python_scripts_sc16/: csv_json.py  csv_mat.py  merge.py
slurm/: slurm_pbs.py
src/: TreeNode.cpp  balance.cpp  blockPart.cpp  coarsen.cpp  construct.cpp  dynamicPartition.C  hcurvedata.cpp  octFunctions.cpp  parUtils.cpp  pickBdy.cpp  point.cpp  seqUtils.cpp  sys.cpp  treenode2vtk.cpp
src/oda/: oda.cpp  odaPartition.cpp  odaUtils.cpp  sub_oda.cpp
src/oda/private/: odaBuildNlist.cpp  odaFactory.cpp
src/omg/: blockDiag.cpp
src/test/: testUtils.C
